apps/orders/overlays/production/prod-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: prod-redis
spec:
  selector:
    matchLabels:
      app: prod-redis
