apps/orders/overlays/production/prod-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: prod-redis
spec:
  selector:
    app: prod-redis
